--- a/views/view_training_class_users.xml
+++ b/views/view_training_class_users.xml
@@ -37,25 +37,25 @@
                 <form string="班级学员">
                     <sheet>
                         <div class="distable">
-                            <div class="distablecell">
+                            <div class="distablecell1">
                                 <div class="course_image">
                                     <field name="user_image" widget="image" class="oe_avatar" />
                                     <!--<field name="user_image" widget="image"/>-->
                                 </div>
                                 <div class="oe_title">
-                                    <h1>
+                                    <h3>
                                         <i class="fa fa-user" aria-hidden="true"></i>
                                         <div class="username">
-                                            <field name="user_id" placeholder="学员姓名"/>
+                                            <field name="user_id"/>
                                         </div>
-                                    </h1>
-                                    <h2>
+                                    </h3>
+                                    <h4>
                                         <field name="class_id"/>
-                                    </h2>
+                                    </h4>
                                 </div>
                             </div>
                             <!--<field name="category_ids" widget="many2many_tags" placeholder="e.g. Part Time" options="{'no_create_edit': True}" groups="hr.group_hr_user"/>-->
-                            <div class="distablecell">
+                            <div class="distablecel2">
                                 <group string="联系方式">
                                     <field name="user_email"/>
                                     <field name="user_mobile"/>
