--- a/templates/attend_school_list.html
+++ b/templates/attend_school_list.html
@@ -9,6 +9,7 @@
     <title>任务列表</title>
     <link rel="stylesheet" href="/ws_training/static/framework7/css/framework7.ios.min.css">
     <link rel="stylesheet" href="/ws_training/static/framework7/css/framework7.ios.colors.min.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/ws_training/static/src/css/base.css">
 </head>
 <body>
@@ -26,7 +27,8 @@
         <div class="pages navbar-through">
             <div data-page="home" class="page">
                 <form class="searchbar searchbar-init" data-search-list=".list-block-search"
-                      data-search-in=".item-title" data-found=".searchbar-found" data-not-found=".searchbar-not-found">
+                      data-search-in=".item-title" data-found=".searchbar-found" data-not-found=".searchbar-not-found"
+                      style="margin-top: 0">
                     <div class="searchbar-input">
                         <input type="search" placeholder="查找">
                         <a href="#" class="searchbar-clear"></a>
@@ -40,55 +42,49 @@
                     <div class="pull-to-refresh-layer" style="top: 30px;">
                     </div>
 
-                    <div id="task-list" class="list-block">
-                        <div class="list-block-content list-block-search searchbar-found">
-                            <ul>
-                                {% for sup in data.training_attend_list %}
-                                <li class="swipeout">
-                                    <a href="#" class="item-link" onclick="onView('{{sup.id}}')">
-                                        <div class="item-content" style="height: 80px;">
-                                            <div herf="#" class="item-inner">
-                                                <div class="item-title main-body">
-                                                    <div class="main-title big-size">
-                                                        <span>{{sup.name}}</span>
-                                                    </div>
-
-                                                    <div class="main-bottom small-size">
-                                                        <span>讲师：{{sup.teacher_id[1]}}</span>
-                                                    </div>
-                                                </div>
-
-                                                <div class="item-after" style="font-size: small">
-                                                    {{sup.time_start}}
-                                                </div>
-
+                        <div id="course-list-1" class="list-block media-list" style="margin-top: 48px">
+                            <div class="list-block-content list-block-search searchbar-found">
+                                <ul>
+                                    {% for sup in data.training_attend_list %}
+                                    <li class="swipeout">
+                                        <a href="#" class="item-link item-content" onclick="onView('{{sup.id}}')">
+                                            <div class="item-media"><i class="fa fa-tasks" aria-hidden="true"></i>
                                             </div>
+                                            <div class="item-inner">
+                                                <div class="item-title-row">
+                                                    <div class="item-title">{{sup.name}}</div>
+                                                    <div class="item-after">{{sup.time_start}}</div>
+                                                </div>
+                                                <div class="item-subtitle">讲师：{{sup.teacher_id[1]}}</div>
+                                                <div class="item-text">签到人数：{{sup.attend_count}}</div>
+                                            </div>
+                                        </a>
+                                        <div class="swipeout-actions-right">
+                                            <a href="#" onclick="onDelete( {{sup.name}})" class="swipeout-delete"
+                                               data-confirm-title="删除?">删除</a>
                                         </div>
-                                    </a>
-                                    <div class="swipeout-actions-right">
-                                        <a href="#" onclick="onDelete( {{sup.name}})" class="swipeout-delete"
-                                           data-confirm-title="删除?">删除</a>
-                                    </div>
-                                </li>
-                                {% endfor%}
-                            </ul>
-                        </div>
+                                    </li>
+                                    {% endfor%}
+                                </ul>
+                            </div>
 
-                    </div>
+                        </div>
 
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
 
-<script type="text/javascript" src="/ws_training/static/framework7/js/framework7.js"></script>
-<script type="text/javascript" src="/ws_training/static/framework7/js/odoo.js"></script>
-<script type="text/javascript" src="/ws_training/static/framework7/js/local_storage.js"></script>
-<script type="text/javascript" src="/ws_training/static/framework7/js/app.js"></script>
+<script type="text/javascript" src="/ws_training/static/ws_framework7/js/framework7.js"></script>
+<script type="text/javascript" src="/ws_training/static/ws_framework7/js/odoo.js"></script>
+<script type="text/javascript" src="/ws_training/static/ws_framework7/js/local_storage.js"></script>
+<script type="text/javascript" src="/ws_training/static/ws_framework7/js/app.js"></script>
 <script type="text/javascript" src="/ws_training/static/src/js/app.js"></script>
 <script type="text/javascript" src="/ws_training/static/base64/base64.min.js"></script>
 <script type="text/javascript" src="/ws_training/static/src/js/attend_course.js"></script>
+<script type="text/javascript" src="/ws_training/static/src/js/ws_pos_login.js"></script>
 </body>
 </html>
