--- a/templates/course_detil.html
+++ b/templates/course_detil.html
@@ -12,7 +12,7 @@
     </div>
     <div data-page="index" class="page">
         <div class="page-content">
-            <div class="list-block">
+            <div class="list-block" style="margin-top: 0">
                 <ul>
                     {% for sup in data.sup_task_list %}
                     <li>
@@ -30,13 +30,14 @@
                 </ul>
             </div>
             <div style="width: 100%; height: auto;">
-                <div class="content-block-title">任务描述</div>
+                <div class="content-block-title">课程描述</div>
                 <textarea id="sup_main_task" placeholder="{{data.this_description}}"
                           style="width: 93%; min-height: 60px;outline: none;padding-left: 15px;padding-right: 15px;border-style:none;font-size: larger;"></textarea>
             </div>
             <div style="padding: 15px;margin-bottom: 15px;">
-                <a href="#" class="button button-big button-fill" onclick="onSubmit({{data.user_id}}, {{data.course_id}})">签到 </a>
+                <a href="#" class="button button-big button-fill" onclick="onSubmit({{data.course_id}})">签到 </a>
             </div>
+
         </div>
     </div>
 </div>
